[tool.poetry]
name = "redact-pdfs"
version = "0.1.0"
description = ""
authors = ["Christo Buschek <christo.buschek@proton.me>"]
readme = "README.md"
packages = [{include = "redact_pdfs"}]

[tool.poetry.dependencies]
python = "^3.9"
pymupdf = "^1.22.5"
click = "^8.1.3"
extract-msg = "^0.41"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
