[tool.poetry]
name = "redact"
version = "0.1.0"
description = ""
authors = ["Christo Buschek <christo.buschek@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymupdf = "^1.23.6"
click = "^8.1.3"
extract-msg = "^0.45"
pantomime = "^0.6.1"
python-magic = "^0.4.27"

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
redact = "redact.cli:main"
